# Finsio

./: .env  .env.example  .replit  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dump.rdb  pyproject.toml  start.sh
.agents/: agent_assets_metadata.toml
backend/: Dockerfile  alembic.ini  db.sqlite3  entry_points.py  manage.py  pyproject.toml  seed_data.py  verify_integration.py
backend/apps/accounting/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py
backend/apps/accounting/api/: __init__.py  serializers.py  urls.py  views.py
backend/apps/accounting/beancount/: __init__.py  generator.py  parser.py  sync.py
backend/apps/accounting/beancount/templates/: account.tpl  transaction.tpl
backend/apps/accounting/migrations/: 0001_initial.py
backend/apps/accounting/services/: __init__.py  invoice_service.py  reconciliation_service.py  reporting_service.py
backend/apps/accounting/tests/: __init__.py  test_beancount_sync.py  test_invoicing.py
backend/apps/core/: __init__.py  api_urls.py  authentication.py  choices.py  entity_urls.py  exceptions.py  health_urls.py  middleware.py  models.py  serializers.py  utils.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/invoicing/: __init__.py  apps.py  managers.py  models.py  serializers.py  tasks.py
backend/apps/invoicing/api/: __init__.py  urls.py  views.py
backend/apps/invoicing/migrations/: 0001_initial.py
backend/apps/invoicing/services/: __init__.py  collect_payment.py  create_invoice.py  reconcile_invoice.py
backend/apps/payments/: __init__.py  admin.py  apps.py  flows.py  managers.py  models.py  registry.py  serializers.py  signals.py
backend/apps/payments/api/: __init__.py  urls.py  views.py  webhook_urls.py  webhooks.py
backend/apps/payments/merchant_gateway/: __init__.py  admin.py  facade.py  providers.py
backend/apps/payments/migrations/: 0001_initial.py
backend/apps/payments/processors/: __init__.py  authorize_net_processor.py  base.py  braintree_processor.py  paypal_processor.py  stripe_processor.py
backend/apps/payments/tests/: __init__.py  test_flows.py  test_processors.py  test_webhooks.py
backend/finsio/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/finsio/settings/: __init__.py  base.py  development.py  production.py  test.py
beancount/: main.beancount
beancount/accounts/: assets.beancount  equity.beancount  expenses.beancount  income.beancount  liabilities.beancount
beancount/config/: options.beancount
beancount/transactions/: 2026-05-17.beancount
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Accounting.tsx  Dashboard.tsx  Health.tsx  Invoices.tsx  Payments.tsx
gateway/: composer.json  fusio.yml
gateway/public/: index.php
gateway/resources/fixtures/: plans.yaml  routes.yaml  scopes.yaml
gateway/resources/mcp/: tools.json
gateway/resources/schemas/: balance_sheet.schema.json  invoice.schema.json  journal_entry.schema.json  payment.schema.json
gateway/src/Action/: HealthAction.php
gateway/src/Connector/: DjangoBackendConnector.php
gateway/src/Middleware/: JwtAuthMiddleware.php  (+1 more)
infrastructure/monitoring/: prometheus.yml
infrastructure/nginx/: Dockerfile  nginx.conf
infrastructure/postgres/: init.sql
infrastructure/redis/: redis.conf
scripts/: export_beancount.py  seed_data.py  setup.sh
(+10 files in other folders)
