[project]
name = "finsio-backend"
version = "1.0.0"
description = "Finsio financial operations backend — payments, accounting, invoicing"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Django core
    "django>=5.0,<5.2",
    "djangorestframework>=3.15",
    "django-filter>=24.0",
    "django-environ>=0.11",
    "django-cors-headers>=4.3",
    "django-extensions>=3.2",

    # Async task queue
    "celery[redis]>=5.3",
    "django-celery-beat>=2.5",
    "django-celery-results>=2.5",

    # Database
    "psycopg2-binary>=2.9",
    "dj-database-url>=2.1",

    # Payment integrations
    "python-getpaid-core>=0.5",
    "django-payments>=3.0",
    "merchant>=0.4",

    # Payment provider SDKs
    "stripe>=8.0",
    "paypalrestsdk>=1.13",
    "braintree>=4.25",

    # Accounting
    "django-ledger>=0.6",

    # Beancount bookkeeping
    "beancount>=3.0",

    # Utilities
    "httpx>=0.27",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "orjson>=3.9",
    "gunicorn>=22.0",
    "redis>=5.0",
    "sentry-sdk[django]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "faker>=24.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "ipdb>=0.13",
]

# getpaid-core entry point registration
[project.entry-points."getpaid.processors"]
finsio-stripe = "apps.payments.processors.stripe_processor:StripeProcessor"
finsio-paypal = "apps.payments.processors.paypal_processor:PayPalProcessor"
finsio-braintree = "apps.payments.processors.braintree_processor:BraintreeProcessor"
finsio-authorize-net = "apps.payments.processors.authorize_net_processor:AuthorizeNetProcessor"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "finsio.settings.test"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["finsio", "apps"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "finsio.settings.test"
